--- a/_talks/2019-10-24-talk.md
+++ b/_talks/2019-10-24-talk.md
@@ -2,7 +2,7 @@
 title: "Recent Advances on Open Domain Question Answering"
 collection: talks
 type: "Conference proceedings talk"
-permalink: /files/open\_domain\_qa.pdf
+permalink: /files/open_domain_qa.pdf
 venue: "Research Seminar Talk"
 date: 2019-10-24
 location: "Borealis AI, Toronto, Canda"
