--- a/_talks/2019-10-24-talk.md
+++ b/_talks/2019-10-24-talk.md
@@ -1,9 +1,9 @@
 ---
 title: "Recent Advances on Open Domain Question Answering"
 collection: talks
-type: "Conference proceedings talk"
+type: "Research Seminar Talk"
 permalink: /files/open_domain_qa.pdf
-venue: "Research Seminar Talk"
+venue: ""
 date: 2019-10-24
 location: "Borealis AI, Toronto, Canda"
 ---
