--- a/_talks/2019-10-24-talk.md
+++ b/_talks/2019-10-24-talk.md
@@ -2,7 +2,7 @@
 title: "Recent Advances on Open Domain Question Answering"
 collection: talks
 type: "Research Seminar Talk"
-permalink: /files/opendomainqa.pdf
+permalink: http://Victor0118.github.io/files/opendomainqa.pdf
 venue: ""
 date: 2019-10-24
 location: "Borealis AI, Toronto, Canda"
