--- a/_talks/2019-06-04-talk.md
+++ b/_talks/2019-06-04-talk.md
@@ -1,5 +1,5 @@
 ---
-title: "Recent Advances on Open Domain Question Answering"
+title: "Detecting Customer Complaint Escalation with Recurrent Neural Networks and Manually-Engineered Features"
 collection: talks
 type: "Industry Track"
 permalink: /files/naacl2019-industryTrack.pdf
