--- a/_talks/2019-06-04-talk.md
+++ b/_talks/2019-06-04-talk.md
@@ -2,9 +2,10 @@
 title: "Detecting Customer Complaint Escalation with Recurrent Neural Networks and Manually-Engineered Features"
 collection: talks
 type: "Industry Track"
-permalink: /files/naacl2019-industryTrack.pdf
+permalink: /talks/2019-06-04-talk
 venue: "NAACL 2019"
 date: 2019-06-04
 location: "Minneapolis, MN, USA"
 ---
 
+[Slides](/files/naacl2019-industryTrack.pdf)
