--- a/_talks/2019-10-24-talk.md
+++ b/_talks/2019-10-24-talk.md
@@ -2,9 +2,10 @@
 title: "Recent Advances on Open Domain Question Answering"
 collection: talks
 type: "Research Seminar Talk"
-permalink: /files/opendomainqa.pdf
+permalink: /talks/2019-10-24-talk
 venue: ""
 date: 2019-10-24
 location: "Borealis AI, Toronto, Canda"
 ---
 
+[slides](/files/opendomainqa.pdf)
